feat: Add OpenAPI definition and API client setup
- Created OpenAPI definition in api-docs.yaml for user, post, comment, and authentication endpoints.
- Added OpenAPI generator configuration in openapitools.json.
- Implemented API client using axios in api.ts for making requests to the backend.
- Developed authApi module for handling authentication-related API calls (login, register, logout, completeProfile).
- Introduced a reusable RadioGroup component for UI consistency in forms.